# Event_tagger

./: .gitignore  README.md  STATE_MANAGEMENT.md  VERCEL_DEPLOYMENT.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  test_models.py
backend/app/: main.py
backend/app/api/: events.py  export.py  stopwatch.py  visualization.py
backend/app/models/: event.py  session.py
backend/app/services/: event_service.py  export_service.py  state_manager.py  stopwatch_service.py
backend/app/utils/: data_manipulation.py  data_viz.py  divergent_chart.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/hand-control/: page.tsx
frontend/src/app/post-match/: page.tsx
frontend/src/components/: EventForm.tsx  EventTable.tsx  ExportButton.tsx  Navigation.tsx  PitchSelector.tsx  Stopwatch.tsx  Visualization.tsx
frontend/src/hooks/: useEventStore.ts  useEvents.ts  useStopwatch.ts
frontend/src/lib/: api.ts
frontend/src/store/: eventStore.ts
frontend/src/types/: react-plotly.js.d.ts
html_test/: test.html
pages/: event_tagger_handcontrol.py  post_match.py
styles/: pitch.css
utils/: data_manipulation.py  data_viz.py
