[project]
name = "event-tagger-backend"
version = "1.0.0"
description = "Backend API for Event Tagger application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "plotly>=5.20.0",
    "plotly-express>=0.4.1",
    "matplotlib>=3.8.3",
    "mplsoccer>=1.2.4",
    "python-multipart>=0.0.9",
]
